# Residual-Additive-Swiglu

./: CMakeLists.txt  Makefile  config.cuh  environment.hpp  environment_tests  header.cuh  main  main.cu  main.exp  main.lib  tmp.cu  tmp2.cu  utils.cuh
include/: config.hpp  environment.hpp
reference code/: config.cuh  environment.cu  environment.hpp  header.cuh  kernels.cu  main.cu  model.cu  model.hpp
src/: environment.cpp  environment.h
tests/: environment_tests.cpp  testEnv.cpp
